@@ -1,5 +1,16 @@
 2008-09-09  Jonathon Jongsma  <jjongsma@gnome.org>
 
+	* cairomm/fontface.cc:
+	* cairomm/fontface.h:
+	* cairomm/fontoptions.cc:
+	* cairomm/fontoptions.h:
+	* cairomm/scaledfont.cc:
+	* cairomm/scaledfont.h:
+	* docs/reference/Doxyfile.in:
+	* tests/test-font-face.cc: add freetype font support
+
+2008-09-09  Jonathon Jongsma  <jjongsma@gnome.org>
+
 	* cairomm/fontface.cc: use vector::empty() rather than ::size()
 
 2008-09-03  Jonathon Jongsma  <jjongsma@gnome.org>
